--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "author": "y",
   "license": "y",
   "private": true,
+  "scripts": {
+    "start": "nodemon",
+    "seed": "node db/seeds.js"
+  },  
   "dependencies": {
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16"
   }
 }
